--- a/input.scss
+++ b/input.scss
@@ -15,22 +15,21 @@
 }
 
 %btnStyle {
-  width: 60px;
+  width: 75px;
   height: 40px;
   color: white;
   background-color: rgba(58, 58, 58, 0.642);
   border: 0px;
   border-radius: 50px;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 body {
   margin: 0;
   color: white;
   size: 20px;
-
   height: 100vh;
-  width: 100vw;
+  width: auto;
   margin: 0;
   padding: 0;
   background: radial-gradient(ellipse at 20% 20%, #35234b 0%, transparent 70%),
@@ -52,34 +51,49 @@ main {
     top: 80px;
     left: 0;
 
+    .CloseNft {
+      position: absolute;
+      margin-top: 0;
+      margin-left: 230px;
+      @extend %smallBtn;
+    } //x
     img {
       width: 200px;
       height: 200px;
-      margin: 10px;
+      margin: 40px;
+      margin-top: 25px;
     }
 
     .nftHover {
       position: absolute;
-      top: -10px;
+      display: none;
+      top: 0px;
       left: 0;
+      margin: 40px;
+      margin-top: 25px;
+      background-color: rgba(95, 82, 92, 0.541);
+      width: 200px;
+      height: 200px;
 
       a {
-        // background-color: rgba(95, 82, 92, 0.541);
-        // display: inline-block;
-        // width: 200px;
-        // height: 200px;
-        // margin-left: 10px;
+        font-size: larger;
+        color: aliceblue;
       }
-      button {
-        margin-left: 200px;
-        @extend %smallBtn;
-      } //x
+    }
+
+    &:hover {
+      .nftHover {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
+
   .popUp {
-    width: 200px;
+    width: 280px;
     margin-top: 20px;
-    margin-left: 15px;
+    margin-left: 10px;
     display: flex;
     justify-content: space-between;
     .nftView {
@@ -99,6 +113,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 20px;
 
     .time {
       display: flex;
@@ -128,6 +143,7 @@ main {
       }
       .CloseMemo {
         margin-left: 240px;
+        margin-top: 10px;
         @extend %smallBtn;
       }
     }
@@ -229,7 +245,7 @@ main {
   .weather {
     display: none;
     margin-top: 25px;
-    margin-left: 50px;
+    margin-left: 100px;
     .CloseWeather {
       @extend %smallBtn;
       margin-left: 100px;
