--- a/input.scss
+++ b/input.scss
@@ -29,7 +29,7 @@ body {
   color: white;
   size: 20px;
   height: 100vh;
-  width: auto;
+
   margin: 0;
   padding: 0;
   background: radial-gradient(ellipse at 20% 20%, #35234b 0%, transparent 70%),
@@ -249,6 +249,16 @@ main {
     .CloseWeather {
       @extend %smallBtn;
       margin-left: 100px;
+    }
+  }
+  .jeans {
+    display: flex;
+    justify-content: center;
+    img {
+      width: 200px;
+      height: 200px;
+      margin: 40px;
+      margin-top: 25px;
     }
   }
 }
