--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
   color: white;
   size: 20px;
   height: 100vh;
-  width: auto;
   margin: 0;
   padding: 0;
   background: radial-gradient(ellipse at 20% 20%, #35234b 0%, transparent 70%), radial-gradient(ellipse at 60% 20%, #2975bf 0%, transparent 70%), radial-gradient(ellipse at 100% 20%, #3d54b1 0%, transparent 70%), radial-gradient(ellipse at 100% 100%, #9f3c54 0%, transparent 70%), radial-gradient(ellipse at 20% 100%, #362d6f 0%, transparent 70%);
@@ -207,6 +206,16 @@ main .weather {
 }
 main .weather .CloseWeather {
   margin-left: 100px;
+}
+main .jeans {
+  display: flex;
+  justify-content: center;
+}
+main .jeans img {
+  width: 200px;
+  height: 200px;
+  margin: 40px;
+  margin-top: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
