--- a/input.scss
+++ b/input.scss
@@ -26,12 +26,11 @@
 
 body {
   margin: 0;
+  padding: 0;
   color: white;
   size: 20px;
   height: 100vh;
 
-  margin: 0;
-  padding: 0;
   background: radial-gradient(ellipse at 20% 20%, #35234b 0%, transparent 70%),
     radial-gradient(ellipse at 60% 20%, #2975bf 0%, transparent 70%),
     radial-gradient(ellipse at 100% 20%, #3d54b1 0%, transparent 70%),
@@ -252,6 +251,9 @@ main {
     }
   }
   .jeans {
+    position: fixed;
+    top: 50px;
+    left: 550px;
     display: flex;
     justify-content: center;
     img {
